[package]
name = "cypress"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust CLI entrypoint for Cypress"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha1 = "0.10.6"
serde_json = "1.0.145"
ureq = { version = "2.10.1", features = ["json"] }
base64 = "0.22.1"
